get sector
