# swagger_server/controllers/round_controller.py
@@ -105,6 +105,45 @@ class RoundView(MethodView):
             
         return response, status_code
     
+    def get_sectors_pool(self):  # noqa: E501
+        """Obtiene todos los sectores de piscinas
+
+        Devuelve todos los registros de la base # noqa: E501
+
+        :param external_transaction_id: 
+        :type external_transaction_id: str
+        :param channel: 
+        :type channel: str
+
+        :rtype: GenericResponse
+        """
+        internal_process = (None, None)
+        function_name = "get_sectors_pool"
+        response = {}
+        status_code = 500
+        try:
+            if connexion.request.headers:
+                start_time = default_timer()
+                internal_transaction_id = str(generate_internal_transaction_id())
+                external_transaction_id = request.headers.get('externalTransactionId')
+                internal_process = (internal_transaction_id, external_transaction_id)
+                response["internal_transaction_id"] = internal_transaction_id
+                response["external_transaction_id"] = external_transaction_id
+                message = f"start request: {function_name}, channel: {request.headers.get('channel')}"
+                logger.info(message, internal=internal_transaction_id, external=external_transaction_id)
+                results = self.round_use_case.get_sectors_pool(internal_transaction_id, external_transaction_id)
+                response["error_code"] = 0
+                response["message"] = "Sectores obtenidos correctamente"
+                response["data"] = results
+                end_time = default_timer()
+                logger.info(f"Fin de la transacción, procesada en : {end_time - start_time} milisegundos",
+                            internal=internal_transaction_id, external=external_transaction_id)
+                status_code = 200
+        except Exception as ex:
+            response, status_code = CustomAPIException.check_exception(ex, function_name, internal_process)
+            
+        return response, status_code
+    
     def get_resume_graphs(self):
         internal_process = (None, None)
         function_name = "get_resume_graphs"
