# swagger_server/swagger/swagger.yaml
@@ -6,6 +6,58 @@ info:
 servers:
 - url: /rest/zent-round-api/v1.0/
 paths:
+  /sectors-pool:
+    get:
+      tags:
+      - Catalogs
+      summary: Obtiene todos los sectores de piscinas
+      description: Devuelve todos los registros de la base
+      operationId: get_sectors_pool
+      parameters:
+        - name: externalTransactionId
+          in: header
+          required: true
+          schema:
+            type: string
+            example: "fcea920f7412b5da7be0cf42b8c93759"
+        - name: channel
+          in: header
+          required: true
+          schema:
+            type: string
+            example: "ZENTINEL"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GenericResponse"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "503":
+          description: Service unavailable
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+      x-openapi-router-controller: swagger_server.controllers.round_controller.RoundView
   /get/resume_graphs:
     get:
       tags:
